# text2orthic

./: .gitignore  LICENSE  README.md  problematic_words.txt  pyproject.toml  requirements.txt
resources/: demo_texts.txt
src/: glyph.py  glyph_renderer.py  main.py  main_gui.py  orthic_encoder.py
